; ModuleID = '/home/carl/AnghaBench/brotli/c/tools/extr_brotli.c_ParseAlias.c'
source_filename = "/home/carl/AnghaBench/brotli/c/tools/extr_brotli.c_ParseAlias.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"unbrotli\00", align 1
@COMMAND_DECOMPRESS = common dso_local global i32 0, align 4
@COMMAND_COMPRESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @ParseAlias to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ParseAlias(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8, align 1
  store i8* %0, i8** %3, align 8
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i64 @strlen(i8* %7)
  store i64 %8, i64* %5, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = call i8* @FileName(i8* %9)
  store i8* %10, i8** %3, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = load i64, i64* %5, align 8
  %14 = call i64 @strncmp(i8* %11, i8* %12, i64 %13)
  %15 = icmp eq i64 %14, 0
  br i1 %15, label %16, label %31

16:                                               ; preds = %1
  %17 = load i8*, i8** %3, align 8
  %18 = load i64, i64* %5, align 8
  %19 = getelementptr inbounds i8, i8* %17, i64 %18
  %20 = load i8, i8* %19, align 1
  store i8 %20, i8* %6, align 1
  %21 = load i8, i8* %6, align 1
  %22 = sext i8 %21 to i32
  %23 = icmp eq i32 %22, 0
  br i1 %23, label %28, label %24

24:                                               ; preds = %16
  %25 = load i8, i8* %6, align 1
  %26 = sext i8 %25 to i32
  %27 = icmp eq i32 %26, 46
  br i1 %27, label %28, label %30

28:                                               ; preds = %24, %16
  %29 = load i32, i32* @COMMAND_DECOMPRESS, align 4
  store i32 %29, i32* %2, align 4
  br label %33

30:                                               ; preds = %24
  br label %31

31:                                               ; preds = %30, %1
  %32 = load i32, i32* @COMMAND_COMPRESS, align 4
  store i32 %32, i32* %2, align 4
  br label %33

33:                                               ; preds = %31, %28
  %34 = load i32, i32* %2, align 4
  ret i32 %34
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i8* @FileName(i8*) #1

declare dso_local i64 @strncmp(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
